# AI-ML-DS

./: .gitignore  AGENTS.md  Pipfile  requirements.txt
00.Resources/: links.txt
01.Python/: Practice1.ipynb  Practice11.ipynb  Practice4.html  Practice5.ipynb  Practice7.ipynb  Practice8.html  mydata.h5
02.PySpark/: Notes1.md  PySpark-Get-Started.ipynb
03.SQL/: Summary_SQL.txt  TestDB.db-wal
08.YouTube/: Links.txt
1.Python/: My_Excel.xlsx  Performance_MNR.xml  Practice10.html  Practice10.ipynb  Practice11.ipynb  Practice2.ipynb  Practice3.ipynb  Practice4.ipynb  Practice5.ipynb  Practice6.html  Practice6.ipynb  Practice8.ipynb  Practice9.html  Practice9.ipynb  compressed_archived.npz  ex3.txt  ex5.csv  example.json  example1.json  hello_world.py  myarrays.npz  mydata.sqlite  notebook_to_pdf.txt  out.csv  sample.json  serialized_dataframe  table.html
10.Debugger/: Notes.txt  calculator.py
10.Git/: notes.txt
12.Debugger/: Notes.txt  example.py  main.py
12.Decorators/: Notes.md  example.ipynb
13.Decorators/: Notes.md
14.Databricks/: Notes.md
15.uv_demo/: Notes.txt  main.py  pyproject.toml
17.OpenCode/: instructions.txt
40.AI-Agent-Course-Build-a-Language‑Learning-Agent-with-OpenAI-LangGraph-Ollama-MCP/language-learning-agent/: clean-word-lists.ipynb  main.py  main_ollama.py  pyproject.toml
40.AI-Agent-Course-Build-a-Language‑Learning-Agent-with-OpenAI-LangGraph-Ollama-MCP/language-learning-agent/agent/: tools.py
40.AI-Agent-Course-Build-a-Language‑Learning-Agent-with-OpenAI-LangGraph-Ollama-MCP/language-learning-agent/agent_ollama/: tools.py
(+1094 files in other folders)
