[project]
name = "language-learning-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.14",
    "spacy-transformers>=1.4.0",
    "typing-extensions>=4.16.0",
    "wordfreq>=3.1.1",
]
